feat: Refactor API endpoints to use dynamic base URL and update security configuration for frontend URL