@@ -1,5 +1,6 @@
 package com.bugTracker.server.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -10,9 +11,13 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
+
+    @Value("${frontend.url}")
+    private String frontendUrl;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -37,15 +42,12 @@ public class SecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
 
         // Allow React development server
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",  // Vite default
-                "http://localhost:3000",  // Create React App default
-                "http://127.0.0.1:5173",
-                "http://127.0.0.1:3000"
+        config.setAllowedOrigins(List.of(
+                frontendUrl
         ));
 
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L); // 1 hour
